visualstudio_solutions/w2_in_lab/w2_in_lab/errors.txt
Timekeeper.cpp: In member function ‘void sict::Timekeeper::start()’:
Timekeeper.cpp:43:56: error: no match for ‘operator=’ (operand types are ‘std::chrono::_V2::steady_clock::time_point {aka std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >}’ and ‘std::chrono::_V2::system_clock::time_point {aka std::chrono::time_point<std::chrono::_V2::system_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >}’)
   startTime =  std::chrono::high_resolution_clock::now();
                                                        ^
In file included from Timekeeper.cpp:11:0:
/usr/include/c++/7/chrono:616:14: note: candidate: constexpr std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >& std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >::operator=(const std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >&)
       struct time_point
              ^~~~~~~~~~
/usr/include/c++/7/chrono:616:14: note:   no known conversion for argument 1 from ‘std::chrono::_V2::system_clock::time_point {aka std::chrono::time_point<std::chrono::_V2::system_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >}’ to ‘const std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >&’
/usr/include/c++/7/chrono:616:14: note: candidate: constexpr std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >& std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >::operator=(std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >&&)
/usr/include/c++/7/chrono:616:14: note:   no known conversion for argument 1 from ‘std::chrono::_V2::system_clock::time_point {aka std::chrono::time_point<std::chrono::_V2::system_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >}’ to ‘std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >&&’
Timekeeper.cpp: In member function ‘void sict::Timekeeper::recordEvent(const char*)’:
Timekeeper.cpp:62:8: error: ‘strncpy’ is not a member of ‘std’
   std::strncpy(recordObj[numOfRecords].message, incomingStr, (strlen(incomingStr) + 1));
        ^~~~~~~
Timekeeper.cpp:62:63: error: ‘strlen’ was not declared in this scope
   std::strncpy(recordObj[numOfRecords].message, incomingStr, (strlen(incomingStr) + 1));
                                                               ^~~~~~
Timekeeper.cpp:62:63: note: suggested alternative: ‘mbrlen’
   std::strncpy(recordObj[numOfRecords].message, incomingStr, (strlen(incomingStr) + 1));
                                                               ^~~~~~
                                                               mbrlen
Text.cpp: In member function ‘sict::Text& sict::Text::operator=(const sict::Text&)’:
Text.cpp:66:37: error: expression in new-declarator must have integral or enumeration type
    this->strArray = new std::string[incomingObj.strArray->length]; //allocate new memory for the size of the incomingObject's pointer(s)
                                     ^~~~~~~~~~~
